--- a/package.json
+++ b/package.json
@@ -8,14 +8,27 @@
     "build": "webpack",
     "start": " node --inspect-brk ./src/translator/translate.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "chen_guanlin",
+  "license": "MIT",
   "devDependencies": {
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "axios": "^0.21.1",
-    "js-md5": "^0.7.3"
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "fs": "0.0.1-security",
+    "https-browserify": "^1.0.0",
+    "install": "^0.13.0",
+    "js-md5": "^0.7.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "util": "^0.12.3",
+    "vm-browserify": "^1.1.2"
   }
 }
